--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <title>Showbox Preview</title>
-  <script type="text/javascript" src="showbox2.js"></script>
+  <script type="text/javascript" src="showbox2.src.js"></script>
   <script type="text/javascript">
   	function init() {
   		Showbox.init({
-  			sbFrontColor:"#FFC000",
-  			showboxBackground:"#000000"
+  			showboxBorderColor:'rgba(0,0,0,0)'
   		});
   	}
   </script>
