New Example Page, some simple changes

--- a/content_a.html
+++ b/content_a.html
@@ -6,3 +6,5 @@ Das ist ein Beispieltext, der dynamisch nachgeladen wurde.<br /><br />
 - CSS3 Effekte<br />
 - Einfach einzubinden<br />
 - Inhalte per Ajax einfach nachladen, ob Synchron oder Asynchron
+<br /><br />
+<div style="text-align:center"><a href="javascript:Showbox.setTextAsync('content_b.html');">N&auml;chste Seite</a></div>
